Updated the footer content to something more readable

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   </head>
   <body>
     <h1>Welcome to my weather app</h1>
-    <footer>Built by Nosipho Mdingi</footer>
+    <footer>
+      Coded by
+      <a href="https://github.com/No5i/" target="_blank">Nosipho Mdingi</a> code
+      hosted on
+      <a href="https://github.com/No5i/My-weather-app" target="_blank"
+        >Github</a
+      >
+      and website on
+      <a href="https://myweatherapss.netlify.app/" target="_blank">Netlify</a>
+    </footer>
   </body>
 </html>
