--- a/index.html
+++ b/index.html
@@ -6,9 +6,25 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Welcome to my weather app</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Knysna</h1>
+        <p>
+          Wednesday 13:00, windy
+          <br />
+          Humidity: 60%, Wind: 15 km/h
+        </p>
+      </div>
+      <div>⛅ 15°C</div>
+    </main>
     <footer>
-      Coded by
+      This project was coded by
       <a href="https://github.com/No5i/" target="_blank">Nosipho Mdingi</a> code
       hosted on
       <a href="https://github.com/No5i/My-weather-app" target="_blank"
