Styled the main container and added custom fonts

--- a/index.html
+++ b/index.html
@@ -3,35 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="src/index.css" />
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <form>
-        <input type="search" placeholder="Enter a city..." required />
-        <input type="submit" value="Search" />
-      </form>
-    </header>
-    <main>
-      <div>
-        <h1>Knysna</h1>
-        <p>
-          Wednesday 13:00, windy
-          <br />
-          Humidity: 60%, Wind: 15 km/h
-        </p>
-      </div>
-      <div>⛅ 15°C</div>
-    </main>
-    <footer>
-      This project was coded by
-      <a href="https://github.com/No5i/" target="_blank">Nosipho Mdingi</a> code
-      hosted on
-      <a href="https://github.com/No5i/My-weather-app" target="_blank"
-        >Github</a
-      >
-      and website on
-      <a href="https://myweatherapss.netlify.app/" target="_blank">Netlify</a>
-    </footer>
+    <div class="weather-app">
+      <header>
+        <form>
+          <input type="search" placeholder="Enter a city..." required />
+          <input type="submit" value="Search" />
+        </form>
+      </header>
+      <main>
+        <div>
+          <h1>Knysna</h1>
+          <p>
+            Wednesday 13:00, windy
+            <br />
+            Humidity: 60%, Wind: 15 km/h
+          </p>
+        </div>
+        <div>⛅ 15°C</div>
+      </main>
+      <footer>
+        This project was coded by
+        <a href="https://github.com/No5i/" target="_blank">Nosipho Mdingi</a>
+        code hosted on
+        <a href="https://github.com/No5i/My-weather-app" target="_blank"
+          >Github</a
+        >
+        and website on
+        <a href="https://myweatherapss.netlify.app/" target="_blank">Netlify</a>
+      </footer>
+    </div>
   </body>
 </html>
