--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             type="search"
             placeholder="Enter a city..."
             required
+            id="search-form-input"
             class="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-button" />
@@ -28,7 +29,7 @@
       <main>
         <div class="weather-app-data">
           <div>
-            <h1 class="weather-app-city">Knysna</h1>
+            <h1 class="weather-app-city" id="city">Knysna</h1>
             <p class="weather-app-details">
               Wednesday 13:00, windy
               <br />
@@ -53,5 +54,6 @@
         <a href="https://myweatherapss.netlify.app/" target="_blank">Netlify</a>
       </footer>
     </div>
+    <script src="src/index.js"></script>
   </body>
 </html>
